<resources>
    <string name="app_name">Mymou</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="max_reward_channels">4</string>
    <string name="allChanOff">0</string>
    <string name="chanZeroOn">1</string>
    <string name="chanZeroOff">2</string>
    <string name="chanOneOn">3</string>
    <string name="chanOneOff">4</string>
    <string name="chanTwoOn">5</string>
    <string name="chanTwoOff">6</string>
    <string name="chanThreeOn">7</string>
    <string name="chanThreeOff">8</string>
    <string name="task_mode">task_mode</string>
    <string-array name="available_tasks">
        <item>Passive reward</item>
        <item>Training 1: Full screen cue</item>
        <item>Training 2: Shrinking central cue</item>
        <item>Training 3: Shrinking moving cue</item>
        <item>Training 4: Static cue</item>
        <item>Training 5: Small Moving cue</item>
        <item>Example task</item>
        <item>Two step task</item>
        <item>Discrete Maze</item>
        <item>Object discrimination (colours)</item>
        <item>Object discrimination (images)</item>
        <item>Progressive Ratio</item>
        <item>Evidence Accumulation</item>
        <item>Spatial response</item>
        <item>Sequential Learning</item>
        <item>Random dot motion</item>
        <item>Discrete value space</item>
        <item>Context Sequence Learning</item>
        <item>Wald\'s Sequential Probability Ratio</item>
        <item>Colored Grating Task</item>
        <item>Social Video Preference task</item>
        <item>Alternating two choice task</item>
    </string-array>
    <string-array name="task_descriptions">
        <item>Blank screen that automatically gives out reward at specified intervals.</item>
        <item>Displays a cue that takes up the entire screen. Subjects can then press anywhere on the screen to trigger reward.</item>
        <item>Displays a cue that initially takes up the entire screen. On each press the cue gets smaller and smaller to encourage accurate screen presses. The size of the cue resets to the full screen size if no touches are received for a short period. </item>
        <item>Displays a cue that initially takes up the entire screen. On each press the cue shrinks in size and moves around the screen. The size of the cue resets to the full screen size if no touches are received for a short period. </item>
        <item>Displays a cue in a fixed position that delivers reward upon press. In settings, can be specified to randomly alternate between two predetermined locations after each press.</item>
        <item>Displays 1 normal sized cue that randomly moves around the screen on each press. </item>
        <item>This task showcases the full features of the Mymou system, including facial recognition, and multiple reward channels. </item>
        <item>Implementation of the reduced two step task described in Akam et al. (2017).</item>
        <item>Associative learning of large networks of stimuli, as seen in Butler and Kennerley (2018). Subjects are shown a target stimuli at the top of the screen. Their current location and neighbouring stimuli are displayed in the lower part of the screen. Subjects then have to learn to navigate to the different locations in the maze.</item>
        <item>Subjects are shown multiple CS- and CS+ stimuli which they must learn to differentiate. Stimuli are limited to single colours </item>
        <item>Subjects are shown multiple CS- and CS+ stimuli which they must learn to differentiate. Stimuli are photos of images taken from the database kindly provided in Brady et al. (2008) PNAS </item>
        <item>One stimuli is displayed on the screen. After each press, the subjects must then have to press twice as many times to gain reward. After a certain period the number of presses needed for reward resets to 1. </item>
        <item>Two bars are displayed with varying length for a certain number of frames. Subjects must then choose which bar had the greatest total length over all the frames. </item>
        <item>Different spatial locations are shown sequentially. Subjects must then repeat the sequence in order for reward. </item>
        <item>A sequence of images in shown, each image must be pressed to progress to the next image. On the second lap of the sequence, at a random point a choice will be given between the next valid image in the sequence vs one of the other images from the sequence</item>
        <item>A movie is played consisting of dots moving in different directions, for which a specified proportion of dots all move towards either the left or right of the screen. Subjects must then select which side of the screen the dots were moving towards.</item>
        <item>Subjects are given choices between two cues that lie on a 10x10 value grid made up of probability and magnitude dimensions. For example, the cue at (1, 1) will give 10% reward 10% of the time. They can then pick either cue are given the corresponding reward along with a secondary reinforcer to indicate whether it was better or worse than the counterfactual option.</item>
        <item>Two sounds are displayed followed by a go cue. This is followed by two further sounds and another go cue. Sounds in the first and second sequence can be within the same context or in different contexts.</item>
        <item>Implementation of Wald\'s Sequential Probability Ratio test as described in Kira, Yang, Shadlen (2015) Neuron.</item>
        <item>Implementation of Coloured Grating task as described in van Kempen et al. (2021) Neuron</item>
        <item>Two options lead to two different groups of videos (only one is played in each trial). Requires video files to be placed in the below directories before the task can be used: \n\n /Mymou/SocialVideo/social \n /Mymou/SocialVideo/nonsocial</item>
        <item>The same two cues are presented each trial, their location randomised. One cue leads to reward whlie the other does not. </item>
    </string-array>
    <string name="default_startuptime">0700</string>
    <string name="default_shutdowntime">1900</string>
    <string name="default_eventcode_correct_trial">1</string>
    <string name="default_eventcode_error_trial">0</string>
    <string name="default_eventcode_timeout_trial">2</string>
    <string name="default_eventcode_wrong_gocue">3</string>
    <string name="default_eventcode_start_trial">5</string>
    <string name="default_eventcode_trial_prepared">6</string>
    <string name="default_gocue_colours">0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,</string>
    <string name="preftag_eventcode_correct_trial">eventcode_correct_trial</string>
    <string name="preftag_eventcode_error_trial">eventcode_error_trial</string>
    <string name="preftag_eventcode_timeout_trial">eventcode_timeout_trial</string>
    <string name="preftag_eventcode_wrong_gocue">eventcode_wrong_gocue</string>
    <string name="preftag_eventcode_start_trial">eventcode_start_trial</string>
    <string name="preftag_strobe_one_on">preftag_strobe_one_on</string>
    <string name="preftag_strobe_one_off">preftag_strobe_one_off</string>
    <string name="preftag_strobe_two_on">preftag_strobe_two_on</string>
    <string name="preftag_strobe_two_off">preftag_strobe_two_off</string>
    <string name="preftag_strobe_three_on">preftag_strobe_three_on</string>
    <string name="preftag_strobe_three_off">preftag_strobe_three_off</string>
    <string name="preftag_strobe_four_on">preftag_strobe_four_on</string>
    <string name="preftag_strobe_four_off">preftag_strobe_four_off</string>
    <string name="default_strobe_one_on">1</string>
    <string name="default_strobe_one_off">2</string>
    <string name="default_strobe_two_on">3</string>
    <string name="default_strobe_two_off">4</string>
    <string name="default_strobe_three_on">5</string>
    <string name="default_strobe_three_off">6</string>
    <string name="default_strobe_four_on">7</string>
    <string name="default_strobe_four_off">8</string>
    <string name="preftag_od_corr_cols">colours_obj_disc_corr_cues</string>
    <string name="preftag_od_incorr_cols">colours_obj_disc_incorr_cues</string>
    <string name="preftag_od_num_corr_cues">od_num_corr_cues</string>
    <string name="preftag_od_num_incorr_cues">od_num_incorr_cues</string>
    <string name="preftag_od_num_steps">od_num_steps</string>
    <string name="preftag_od_repeat_error">od_repeat_on_error</string>
    <string name="preftag_colgrat_start_dim">colgrat_start_dim</string>
    <string name="preftag_colgrat_end_dim">colgrat_end_dim</string>
    <string name="preftag_colgrat_red_x">colgrat_red_x</string>
    <string name="preftag_colgrat_red_y">colgrat_red_y</string>
    <string name="preftag_colgrat_green_x">colgrat_green_x</string>
    <string name="preftag_colgrat_green_y">colgrat_green_y</string>
    <string name="preftag_colgrat_blue_x">colgrat_blue_x</string>
    <string name="preftag_colgrat_blue_y">colgrat_blue_y</string>
    <string name="preftag_colgrat_rt_limit">colgrat_rt_limit</string>
    <string name="preftag_colgrat_catchtrialfreq">preftag_colgrat_catchtrialfreq</string>
    <string name="preftag_colgrat_target_shape">colgrat_target_shape</string>
    <string name="preftag_colgrat_fixation_time_mi">colgrat_fixation_time_mi</string>
    <string name="preftag_colgrat_stimulus_time_mi">colgrat_stimulus_time_mi</string>
    <string name="preftag_colgrat_cue_time_mi">colgrat_cue_time_mi</string>
    <string name="preftag_colgrat_dim_time_mi">colgrat_dim_time_mi</string>
    <string name="preftag_colgrat_fixation_time_ma">colgrat_fixation_time_ma</string>
    <string name="preftag_colgrat_stimulus_time_ma">colgrat_stimulus_time_ma</string>
    <string name="preftag_colgrat_cue_time_ma">colgrat_cue_time_ma</string>
    <string name="preftag_colgrat_dim_time_ma">colgrat_dim_time_ma</string>
    <string name="preftag_colgrat_sizecolcue">colgrat_sizecolcue</string>
    <string name="preftag_colgrat_sizefixcue">colgrat_sizefixcue</string>
    <string name="preftag_colgrat_sizeindicatorcue">colgrat_sizeindicatorcue</string>
    <string name="preftag_colgrat_trainingmode">colgrat_trainingmode</string>
    <string name="preftag_colgrat_sizestripes">preftag_colgrat_sizestripes</string>
    <string name="preftag_colgrat_grateoffset">preftag_colgrat_grateoffset</string>
    <string name="preftag_colgrat_numstripes">preftag_colgrat_numstripes</string>
    <string name="preftag_t_sc_minrew">default_t_sc_minrew</string>
    <string name="preftag_t_sc_maxrew">preftag_t_sc_maxrew</string>
    <string name="preftag_t_sc_miniti">default_t_sc_miniti</string>
    <string name="preftag_t_sc_maxiti">default_t_sc_maxiti</string>
    <string name="preftag_t_sc_sess_length">preftag_t_sc_sess_length</string>
    <string name="preftag_t_sc_npn">preftag_t_sc_npn</string>
    <string name="preftag_t_sc_npniti">preftag_t_sc_npniti</string>
    <string name="preftag_t_sc_stopsess">preftag_t_sc_stopsess</string>
    <string name="preftag_t_sc_photo">preftag_t_sc_photo</string>
    <string name="preftag_t_sc_cuex">preftag_t_sc_cuex</string>
    <string name="preftag_t_sc_cuey">preftag_t_sc_cuey</string>
    <string name="preftag_t_sc_cuextwo">preftag_t_sc_cuextwo</string>
    <string name="preftag_t_sc_cueytwo">preftag_t_sc_cueytwo</string>
    <string name="preftag_t_sc_cueheight">preftag_t_sc_cueheight</string>
    <string name="preftag_t_sc_cuewidth">preftag_t_sc_cuewidth</string>
    <string name="preftag_t_sc_cue_colour">preftag_t_sc_cue_colour</string>
    <string name="preftag_t_sc_cue_border_colour">preftag_t_sc_cue_border_colour</string>
    <string name="preftag_t_sc_cue_shape">preftag_t_sc_cue_shape</string>
    <string name="preftag_t_sc_bordersize">preftag_t_sc_bordersize</string>
    <string name="preftag_t_sc_togglecue">preftag_t_sc_togglecue</string>
    <string name="preftag_t_sc_alternatecue">preftag_t_sc_alternatecue</string>
</resources>