<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="event_codes"
        app:title="Event codes"
        android:summary="Common event codes that are stored in log data for various task events">

      <EditTextPreference
          app:key="@string/preftag_eventcode_correct_trial"
          app:title="Correct trial"
          app:defaultValue="@string/default_eventcode_correct_trial"
      />

      <EditTextPreference
           app:key="@string/preftag_eventcode_error_trial"
           app:title="Error trial"
           app:defaultValue="@string/default_eventcode_error_trial"
      />

      <EditTextPreference
           app:key="@string/preftag_eventcode_timeout_trial"
           app:title="Idle timeout"
           app:defaultValue="@string/default_eventcode_timeout_trial"/>

      <EditTextPreference
           app:key="@string/preftag_eventcode_wrong_gocue"
           app:title="Wrong monkey's go cue pressed"
           app:defaultValue="@string/default_eventcode_wrong_gocue"/>

      <EditTextPreference
           app:key="@string/preftag_eventcode_start_trial"
           app:title="Start trial"
           app:defaultValue="@string/default_eventcode_start_trial"/>


    </PreferenceCategory>

</androidx.preference.PreferenceScreen>