<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            android:layout="@layout/preferences_title"
            app:key="task_settings"
            app:title="Task settings">

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_minrew"
                android:max="20000"
                app:key="@string/preftag_t_sc_minrew"
                app:min="200"
                app:title="Minimum reward duration (ms)"
                app:summary="Tap to enter value" />

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_maxrew"
                android:max="20000"
                app:key="@string/preftag_t_sc_maxrew"
                app:min="1"
                app:title="Maximum reward duration (ms)"
                app:summary="Tap to enter value"/>

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_miniti"
                android:max="1000"
                app:key="@string/preftag_t_sc_miniti"
                app:min="1"
                app:summary="A random ITI between the minimum and maximum inter-reward interval will be chosen each time. Tap to type number."
                app:title="Minimum inter-reward interval (s)" />

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_maxiti"
                android:max="1000"
                app:key="@string/preftag_t_sc_maxiti"
                app:min="1"
                app:summary="A random ITI between the minimum and maximum inter-reward interval will be chosen each time. Tap to type number."
                app:title="Maximum inter-reward interval (s)" />

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_npn"
                android:max="20"
                app:key="@string/preftag_t_sc_npn"
                app:min="1"
                app:title="Number presses needed for reward"
                app:summary="Subject will need to press cue this number of times to be rewarded. Tap to enter value"/>

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_npniti"
                android:max="20"
                app:key="@string/preftag_t_sc_npniti"
                app:min="1"
                app:title="Inter-press interval (s)"
                app:summary="If Number Presses Needed For Reward > 1, the cue will switch off for this duration in between each press. Tap to enter value"/>

        <SwitchPreferenceCompat
                app:defaultValue="@bool/default_t_sc_stopsess"
                app:key="@string/preftag_t_sc_stopsess"
                app:summary="If enabled, session will be halted after the specified length"
                app:title="End session after a certain duration" />

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_sess_length"
                android:max="600"
                app:isPreferenceVisible="false"
                app:key="@string/preftag_t_sc_sess_length"
                app:min="1"
                app:summary="After this duration task will shut off and no longer be accessible until restarted."
                app:title="Maximum session time (mins)" />

        <SwitchPreferenceCompat
                app:defaultValue="@bool/default_t_sc_photo"
                app:key="@string/preftag_t_sc_photo"
                app:title="Take photos during reward delivery" />

        <SwitchPreferenceCompat
                app:defaultValue="@bool/default_t_sc_togglecue"
                app:key="@string/preftag_t_sc_togglecue"
                app:title="Hide cue during reward delivery and ITI" />

        <SwitchPreferenceCompat
                app:defaultValue="@bool/default_t_sc_alternatecue"
                app:key="@string/preftag_t_sc_alternatecue"
                app:summary="Cue will randomly alternate (with replacement) between two fixed positions"
                app:title="Randomly alternate cue position" />


    </PreferenceCategory>


    <PreferenceCategory
            android:layout="@layout/preferences_title"
            app:title="\nCue settings">

        <ListPreference
                android:defaultValue="@integer/default_pr_shape"
                android:entries="@array/shapes"
                android:entryValues="@array/shapevalues"
                app:key="@string/preftag_t_sc_cue_shape"
                app:title="Cue shape" />

        <ListPreference
                android:defaultValue="@integer/default_t_sc_cue_colour"
                android:entries="@array/colournames"
                android:entryValues="@array/colourvalues"
                app:key="@string/preftag_t_sc_cue_colour"
                app:title="Cue colour" />

        <ListPreference
                android:defaultValue="@integer/default_t_sc_bordercolour"
                android:entries="@array/colournames"
                android:entryValues="@array/colourvalues"
                app:key="@string/preftag_t_sc_cue_border_colour"
                app:title="Cue border colour" />

        <mymou.preferences.SeekBarPreferenceCustom
                app:key="@string/preftag_t_sc_cuewidth"
                                android:defaultValue="@integer/default_t_sc_cuewidth"
                android:max="2000"
                app:title="Cue width (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
                app:key="@string/preftag_t_sc_cueheight"
                android:defaultValue="@integer/default_t_sc_cueheight"
                android:max="2000"
                app:title="Cue height (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
                android:defaultValue="@integer/default_t_sc_bordersize"
                android:max="80"
                app:key="@string/preftag_t_sc_bordersize"
                app:title="Border thickness" />

        <mymou.preferences.SeekBarPreferenceCustom
                app:key="@string/preftag_t_sc_cuex"
                app:title="X position of cue (pixels)" />
        <mymou.preferences.SeekBarPreferenceCustom
                app:key="@string/preftag_t_sc_cuey"
                app:title="Y position of cue (pixels)" />

        <mymou.preferences.SeekBarPreferenceCustom
                app:key="@string/preftag_t_sc_cuextwo"
                app:title="Second X position of cue (pixels)" />
        <mymou.preferences.SeekBarPreferenceCustom
                app:key="@string/preftag_t_sc_cueytwo"
                app:title="Second Y position of cue (pixels)" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>